Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4176

HA Error handling

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.17
    • 0.19
    • C++ Clustering
    • None

    Description

      Fix error handling so that backup brokers shut down on replication errors.

      Previously replication errors were being thrown to the primary, breaking the replication
      session. This would put the primary into an endless futile reconnect attempt.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: