qpid/cpp/src/qpid/ha/ConnectionObserver.cpp
@@ -52,28 +52,40 @@ ConnectionObserver::ObserverPtr ConnectionObserver::getObserver() {
 }
 
 void ConnectionObserver::opened(broker::Connection& connection) {
-    if (connection.isLink()) return; // Allow outgoing links.
-    if (connection.getClientProperties().isSet(ADMIN_TAG)) {
-        QPID_LOG(debug, logPrefix << "Allowing admin connection: "
-                 << connection.getMgmtId());
-        return;                 // No need to call observer, always allow admins.
-    }
-    BrokerInfo info;            // Avoid self connections.
-    if (getBrokerInfo(connection, info)) {
-        if (info.getSystemId() == self) {
-            QPID_LOG(debug, "HA broker rejected self connection "+connection.getMgmtId());
-            connection.abort();
+    try {
+        if (connection.isLink()) return; // Allow outgoing links.
+        if (connection.getClientProperties().isSet(ADMIN_TAG)) {
+            QPID_LOG(debug, logPrefix << "Allowing admin connection: "
+                     << connection.getMgmtId());
+            return;                 // No need to call observer, always allow admins.
         }
+        BrokerInfo info;            // Avoid self connections.
+        if (getBrokerInfo(connection, info)) {
+            if (info.getSystemId() == self) {
+                QPID_LOG(debug, "HA broker rejected self connection "+connection.getMgmtId());
+                connection.abort();
+            }
 
+        }
+        ObserverPtr o(getObserver());
+        if (o) o->opened(connection);
     }
-    ObserverPtr o(getObserver());
-    if (o) o->opened(connection);
+    catch (const std::exception& e) {
+        QPID_LOG(error, logPrefix << "Open error: " << e.what());
+        throw;
+    }
 }
 
 void ConnectionObserver::closed(broker::Connection& connection) {
-    BrokerInfo info;
-    ObserverPtr o(getObserver());
-    if (o) o->closed(connection);
+    try {
+        BrokerInfo info;
+        ObserverPtr o(getObserver());
+        if (o) o->closed(connection);
+    }
+    catch (const std::exception& e) {
+        QPID_LOG(error, logPrefix << "Close error: " << e.what());
+        throw;
+    }
 }
 
 const std::string ConnectionObserver::ADMIN_TAG="qpid.ha-admin";
