qpid/cpp/src/qpid/ha/ReplicatingSubscription.h
@@ -24,7 +24,6 @@
 
 #include "BrokerInfo.h"
 #include "qpid/broker/SemanticState.h"
-#include "qpid/broker/QueueObserver.h"
 #include "qpid/broker/ConsumerFactory.h"
 #include "qpid/types/Uuid.h"
 #include <iosfwd>
